Version 1.0.0 - First release I've fixed the issue where button had what I thought were deadspots. I found out it was just actually the element with the class wheel that was a square and sometimes it overlapped the button and caused the wheel to be spinned. Changing it's radius to 100% (making it a wheel) fixed this, the wheel is now not reaching the nav bar by 10px. Which is enough for a normal user.

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ nav {
     display: flex;
     flex-direction: row;
     align-items: center;
+    z-index: 100;
 }
 
 nav>* {
@@ -80,6 +81,7 @@ main {
 .wheel {
     width: var(--circle_size);
     height: var(--circle_size);
+    border-radius: 100%;
     /* background-color: red; */
 }
 
